<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dallas Suites</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--Home-->
    <string name="home_rooms">SUITES</string>
    <string name="home_services">SERVICIOS</string>
    <string name="home_register">REGISTRO</string>
    <string name="home_profile">PERFIL</string>

    <!--Register-->
    <string name="register_name">Nombre</string>
    <string name="register_lastname">Apellido</string>
    <string name="register_email">Correo Electrónico</string>
    <string name="register_id">Cédula de identidad</string>
    <string name="register_dateofbirth">Fecha de nacimiento</string>
    <string name="register_username">Sobrenombre</string>
    <string name="register_password">Contraseña</string>
    <string name="register_repeatpassword">Repetir contraseña</string>
    <string name="register_popup_ok">OK</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur elit.Vivamus ac posuere ante, mauris a euismod nisl.
    Proin laoreet arcu a magna fringilla</string>

    <!--Services-->
    <string name="rates_title">PRECIOS</string>
    <string name="services_restaurant">RESTAURANTE</string>
    <string name="services_roomservice">ROOM SERVICE</string>
    <string name="services_privacyandsecurity">PRIVACIDAD Y SEGURIDAD</string>
    <string name="services_doublereception">DOBLE RECEPCIÓN</string>
    <string name="services_comfortandamenities">CONFORT Y AMENIDADES</string>
    <string name="services_roomservice_copy">Para complementar su estadía, le ofrecemos una gran
variedad de platos y una extensa carta de bebidas para
que las disfrute tanto en nuestro bar/restaurant,
como en la comodidad de su Suite.</string>
    <string name="services_privacyandsecurity_copy">No sólo la calidad de nuestros servicios nos
distinguen, sino también la privacidad y
seguridad de nuestras instalaciones.</string>
    <string name="services_doublereception_copy">Sólo en Dallas Suites Hotel tenemos una
doble recepción que le garantiza fluidez a su
llegada y el menor tiempo de espera posible</string>
    <string name="services_comfortandamenities_copy">Sauna, vapor, jacuzzi, pole dance, son algunas de
las amenidades que le esperan en nuestras Suites,
para que su visita sea única en su estilo.</string>


    <!--Restaurant-->
    <string name="restaurant_desayuno">DESAYUNO</string>
    <string name="restaurant_ensalada">ENSALADAS</string>
    <string name="restaurant_depicar">DE PICAR</string>
    <string name="restaurant_sandwiches">SANDWICHES</string>
    <string name="restaurant_pizzas">PIZZAS</string>
    <string name="restaurant_postres">POSTRES</string>
    <string name="restaurant_restodeldia">RESTO DEL DÍA</string>
    <string name="restaurant_bebidas">BEBIDAS</string>

    <!--Profile-->
    <string name="profile_history">HISTORIAL</string>

    <!--Edit-->
    <string name="edit_title">EDITAR</string>
    <string name="edit_addpassword">AGREGAR CONTRASEÑA</string>
    <string name="edit_save">GUARDAR</string>

    <!--Login-->
    <string name="login_retrievepassword">Recuperar Contraseña</string>
    <string name="login_login">INICIAR SESIÓN</string>
    <string name="login_title">INICIO DE SESIÓN</string>

    <!--Mockup Restaurant Data-->
    <string name="tequeños">Tequeños</string>
    <string name="abrebocasvenezolanos">Abrebocas venezolanos</string>
    <string name="nachos">Nachos</string>
    <string name="conchadepapa">Concha de papa</string>
    <string name="dedosdemozzarella">Dedos de mozarella</string>
    <string name="calamaresalajillo">Calamares al ajillo</string>

    <string name="tequeños_descrip">Rellenos de queso blanco fresco acompañados de salsa al gusto.</string>
    <string name="abrebocasvenezolanos_descrip">Pastelitos andinos rellenos de carne, empanaditas surtidas y tequeños rellenos de queso.</string>
    <string name="nachos_descrip">Tortillas de maíz, servidas con sour de cream, pico de gallo, guacamole y caraotas.</string>
    <string name="conchadepapa_descrip">Conchas de papas fritas rellenas de crema de jamón serrano y tocineta.</string>
    <string name="dedosdemozarella_descrip">Dedos de mozzarella con salsa nápoli y albahaca.</string>
    <string name="calamaresalajillo_descrip">Deliciosos calamares preparados al ajillo acompañados de hongos</string>
    <string name="retrivepassword_title">OLVIDÉ CONTRASEÑA</string>

    <!-- Drawer Resources-->
    <string name="drawer_open">OPEN</string>
    <string name="drawer_close">CLOSE</string>

    <!--New Password-->
    <string name="newpassword_copy">Podrás crear varias contraseñas para\n
acumular puntos con diferentes parejas</string>
    <string name="agregar">AGREGAR</string>

    <string name="palabraclave">Palabra Clave</string>
    <string name="roomdetail_suites">SUITES</string>
    <string name="qrcode_title">CÓDIGO QR</string>
    <string name="qrcode_copy1">¿CÓMO FUNCIONA?</string>
    <string name="qrcode_copy2">Muestra este QR en la recepción\npara acumular o gastar puntos</string>
    <string name="keyword">Palabra clave</string>
    <string name="keyword_popup_text">La Palabra Clave te ayudará\na recuperar tu contraseña.\nCada contraseña tendrá\nsu palabra clave.</string>
    <string name="copy_tut">Podrás crear varias contraseñas para acumular\npuntos con diferentes parejas. Cada contraseña\ntendrá asociada una palabra clave que te ayudará\na diferenciarlas facilmente.</string>
    <string name="tut_title">VARIAS CONTRASEÑAS</string>
    <string name="rates_url">http://precios.dallassuiteshotel.com/</string>


</resources>
