<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/servicios_background">


    <TextView
        android:id="@+id/services_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/home_services"
        android:textColor="@color/dallas_typeface_color"
        android:textSize="@dimen/title_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/services_title"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:weightSum="2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/home_logo" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="6">

            <Button
                android:id="@+id/services_button_rates"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/home_button_selector"
                android:text="@string/rates_title"
                android:textColor="@color/dallas_typeface_color"
                android:textSize="23dp" />

            <Button
                android:id="@+id/services_button_restaurant"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/home_button_selector"
                android:text="@string/services_restaurant"
                android:textColor="@color/dallas_typeface_color"
                android:textSize="23dp" />

            <Button
                android:id="@+id/services_button_roomservice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/home_button_selector"
                android:text="@string/services_roomservice"
                android:textColor="@color/dallas_typeface_color"
                android:textSize="23dp" />

            <Button
                android:id="@+id/services_button_privacyandsecurity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/home_button_selector"
                android:text="@string/services_privacyandsecurity"
                android:textColor="@color/dallas_typeface_color"
                android:textSize="23dp" />

            <Button
                android:id="@+id/services_button_doublereception"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/home_button_selector"
                android:text="@string/services_doublereception"
                android:textColor="@color/dallas_typeface_color"
                android:textSize="23dp" />

            <Button
                android:id="@+id/services_button_comfortandamenities"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/home_button_selector"
                android:text="@string/services_comfortandamenities"
                android:textColor="@color/dallas_typeface_color"
                android:textSize="23dp" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>