<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/register_popup_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/register_popup_background" />


    <ImageButton
        android:id="@+id/register_popup_imagebutton_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/register_popup_background"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/register_button_close"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/register_popup_button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/register_popup_ok_selector"
        android:text="@string/register_popup_ok"
        android:textSize="30sp"
        android:layout_alignBottom="@id/register_popup_background"
        />

    <ImageView
        android:id="@+id/register_popup_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/home_popup_pass"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/register_popup_imagebutton_close"
        />

    <TextView
        android:id="@+id/register_popup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_password"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/register_popup_img"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="20sp"
        android:textColor="@color/dallas_typeface_color"
        />

    <TextView
        android:id="@+id/register_popup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/lorem_ipsum"
        android:layout_below="@id/register_popup_title"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:lineSpacingExtra="1dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textSize="14sp"
        />


</RelativeLayout>