<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="2"
    android:background="@drawable/home_background"
    android:orientation="vertical"
    tools:context=".Home">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/home_imagebutton_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home_login_selector"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@android:color/transparent"/>

        <ImageView
            android:id="@+id/home_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/home_logo"

            />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">


        <Button
            android:id="@+id/home_button_register_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/home_button_selector"
            android:layout_alignParentBottom="true"
            android:text="@string/home_register"
            android:textSize="23sp"
            android:textColor="@color/dallas_typeface_color"
            />

        <Button
            android:id="@+id/home_button_services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/home_button_selector"
            android:layout_above="@+id/home_button_register_profile"
            android:text="@string/home_services"
            android:textSize="23sp"
            android:textColor="@color/dallas_typeface_color"
            />

        <Button
            android:id="@+id/home_button_rooms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/home_button_selector"
            android:layout_above="@+id/home_button_services"
            android:text="@string/home_rooms"
            android:textSize="23sp"
            android:textColor="@color/dallas_typeface_color"
            />







    </RelativeLayout>


</LinearLayout>
